<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, LockScreenAppActivity!</string>
    <string name="app_name">The Adz</string>
    <string name="unloack">Unlock</string>
    <string name="nowifi">No Wifi</string>

    <color name="mycolor1">#F5DC49</color>

    <string name="home">Home</string>
    <string name="previewlockscreen">Preview Lock Screen</string>
    <string name="register"><u>New here? Sign up</u></string>
    <string name="registerbtn">Create Account</string>
    <string name="login">Sign in</string>
    <string name="or">Or</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="progesschecking">Loading ..\..</string>
    <string name="fillrequired">Fill in all fields</string>
    <string name="regsuccess">Success register as member</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="enteremailtoreset">Enter email to reset password : </string>
    <string name="reset">Reset Password</string>
    <string name="resetpasswordmailsend">An email been send to your email. Please follow the step to reset the password.</string>

    <!-- Facebook -->
    <string name="APP_ID">403549449813138</string>

    <!-- Side Menu Item -->
    <string name="title_section1">Home</string>
    <string name="title_section2">Redeem</string>
    <string name="title_section3">Records</string>
    <string name="title_section4">Ranking</string>
    <string name="title_section5">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_account">Accounts</string>
    <string name="action_logout"><u>Logout</u></string>

    <!-- Campaign Details -->
    <string name="campaignname">Name</string>
    <string name="campaignmerchant">Merchant</string>
    <string name="campaignlink">Link</string>
    
    <!-- Redeem -->
    <string name="redeemmsg1">Please fill in required info to continue.</string>
    <string name="deliveryAddress">Address Line 1</string>
    <string name="deliveryAddress2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="postcode">Postcode</string>
    <string name="bankname">Bank Name</string>
    <string name="bankacc">Bank Account Number</string>
    <string name="banktype">Bank Account Name</string>
    <string name="btnredeem">Redeeem</string>
    <string name="identifynumber">Identity Number</string>
    <string name="mobileoperator">Mobile Operator Id</string>
    <string name="mobileaccnumber">Mobile Account Number</string>
    <string name="redeemSuccess">Redeeem Successfully</string>
    
    <!-- User Details -->
    <string name="btnfriends">Invite Friends and Earn More</string>
    <string name="btninterest">My Interests</string>
    <string name="btnupdate">Update Profile</string>
    <string name="updatesuccess">Update successfully</string>
    
    <!-- Input Dialog -->
    <string name="referraltitle">Referral Code</string>
    <string name="referraloptional">Referral Code (Optional)</string>

</resources>