<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sub_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/redeemmsg1"
        android:textColor="#fff" />

    <LinearLayout
        android:id="@+id/typeDeliveryLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:visibility="gone" >

        <EditText
            android:id="@+id/deliveryAddress1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deliveryAddress" />

        <EditText
            android:id="@+id/deliveryAddress2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deliveryAddress2" />

        <EditText
            android:id="@+id/postcode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postcode" />

        <EditText
            android:id="@+id/city"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city" />

        <EditText
            android:id="@+id/state"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/state" />

        <EditText
            android:id="@+id/country"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/typeMoneyLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:visibility="gone" >

        <EditText
            android:id="@+id/etBankName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bankname" />

        <EditText
            android:id="@+id/etBankAcc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bankacc" />

        <EditText
            android:id="@+id/etBankAccName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/banktype" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/typeMobileLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:visibility="gone" >

        <EditText
            android:id="@+id/etMobileOperator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobileoperator" />

        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobileaccnumber" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRedeem"
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style"
        android:text="@string/btnredeem"
        android:textColor="#fff"
        android:textSize="18sp" />

</LinearLayout>