<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/firstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        android:visibility="gone" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:visibility="gone" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="#a0db8e"
        android:text="@string/registerbtn" />

</LinearLayout>