<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sub_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <android.support.v4.view.ViewPager
		    android:id="@+id/details_imagePager"			
		    android:layout_width="fill_parent"
		    android:layout_height="300dp" 
		    android:background="#FFFFFF"
		    android:layout_marginBottom="6dp"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="15dp" >

            <TextView
                android:id="@+id/campaignNametxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/campaignname"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/campaignName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="#fff"
            android:padding="15dp" >

            <TextView
                android:id="@+id/campaignMerchanttxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/campaignmerchant"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/campaignMerchant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="#fff"
            android:padding="15dp" >

            <TextView
                android:id="@+id/campaignLinktxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/campaignlink"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/campaignLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_toRightOf="@id/campaignLinktxt"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>