<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/lockscreen_logo" />

        <LinearLayout
            android:id="@+id/normalLoginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_style"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="3dp"
                    android:background="#EDEDF3"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:padding="10dp"
                        android:src="@drawable/login_email" />

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="#EDEDF3"
                        android:hint="@string/email"
                        android:textSize="18sp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#9B9BAB" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="#EDEDF3"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:padding="10dp"
                        android:src="@drawable/login_pass" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="#EDEDF3"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_style"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="100" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="45"
                    android:background="#fff" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="center_horizontal"
                    android:text="@string/or"
                    android:textColor="#fff" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="45"
                    android:background="#fff" />
            </LinearLayout>

            <com.facebook.widget.LoginButton
                android:id="@+id/authButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/forgotpassword"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="right"
                    android:text="@string/register"
                    android:textColor="#fff" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/profileLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <com.facebook.widget.ProfilePictureView
                android:id="@+id/userPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                facebook:preset_size="large" />

            <LinearLayout
                android:id="@+id/userDetails"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/userPic"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="#fff"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/row1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="35"
                        android:text="Full Name"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="65"
                        android:textColor="#000" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/row2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="35"
                        android:text="Email"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/userEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="65"
                        android:textColor="#000" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/row3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="35"
                        android:text="Birthday"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/userBirthday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="65"
                        android:text="30/11/1991"
                        android:textColor="#000" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/row4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="35"
                        android:text="Gender"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/userGender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="65"
                        android:textColor="#000" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/row5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="35"
                        android:text="Location"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/userLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="65"
                        android:textColor="#000" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>